_sass/layouts/guide.scss
body.guides,
body.guides-configuration-reference {
  div.guide {
    padding-bottom: 6rem;

    h1, h2, h3, h4, h5, h6, p, small, strong, em,
    table tr th, table tr td, li, i, dt, .title, .paragraph, .footnote {
      color: #0D1C2C;
    }
    a, .description-decoration, .description-decoration span{
      color: $link-light-bg;
      &:hover, &:active, &:focus {
        color: $link-hover;
      }
    }
    .toc {
      float: right;
      width: 350px;
      margin-left: 20px;
      margin-bottom: 20px;
      background-color: $white;
      ul {
        list-style: none;
      }
      a {
         text-decoration: none;
         &:hover {
           text-decoration: underline;
         }
      }

      &:empty {
        display: none;
      }
    }

    hr {
      border:solid $grey-2;border-width:1px 0 0;clear:both;margin:1.25em 0 1.1875em;height:0
    }
  }
}

